--- a/plan.html
+++ b/plan.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://use.fontawesome.com/0dee6dd118.js"></script>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Document</title>
@@ -18,7 +19,7 @@
                 <h2>باقة البداية</h2>
             </div>
             <div class="plan__content">
-                <div class="plan__content__card card text-right px-5 py-3">
+                <div class="plan__content__card card text-right px-md-5 px-2 py-3">
                     <div class="plan__content__card--title font-weight-bold">
                         مميزات الباقة
                     </div>
@@ -52,7 +53,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="plan__content__card card text-right px-5 py-3">
+                <div class="plan__content__card card text-right px-md-5 px-2 py-3">
                     <div class="plan__content__card--title font-weight-bold">
                         مميزات الباقة
                     </div>
@@ -86,7 +87,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="plan__content__card card text-right px-5 py-3">
+                <div class="plan__content__card card text-right px-md-5 px-2 py-3">
                     <div class="plan__content__card--title font-weight-bold">
                         مميزات الباقة
                     </div>
@@ -120,7 +121,7 @@
                         </li>
                     </ul>
                 </div>
-                <div class="plan__content__card card text-right px-5 py-3">
+                <div class="plan__content__card card text-right px-md-5 px-2 py-3">
                     <div class="plan__content__card--title font-weight-bold">
                         مميزات الباقة
                     </div>
@@ -158,7 +159,7 @@
             <div class="plan-profile__payment py-5">
                 <div class="row">
 
-                    <div class="col-6 text-right" dir="rtl">
+                    <div class="col-12 col-md-6 text-right" dir="rtl">
                         <label class="custom-radios">الاشتراك الشهري <br>
                             <span class="text-muted label"> <span class="text-dark">115</span> ريال (شامل الضريبة)
                             </span>
@@ -173,7 +174,7 @@
                             <span class="checkmark"></span>
                         </label>
                     </div>
-                    <div class="col-6 text-center">
+                    <div class="col-12 col-md-6 text-center">
                         <div class="price-circle">
                             <span class="display-4 text-danger font-weight-bold">
                                 230
@@ -184,23 +185,24 @@
                 </div>
             </div>
             <div class="plan-profile__discount-area py-5">
-                <div class="row ">
+                <div class="row align-items-center">
 
-                    <div class="col-6 text-right">
-                        <h3 class="font-weight-bold">هل يتوفر لديك كوبون خصم ؟</h3>
+                    <div class="col-12 col-md-6 text-right">
+                        <h4 class="font-weight-bold">هل يتوفر لديك كوبون خصم ؟</h4>
                         <span>أضف كود الخصم هنا</span>
 
-                        <label class="custom-checkbox mt-5"> . أوافق على<a href="#"> الشروط والأحكام</a> <br>
-                            <span class="text-danger label">يجب الموافقة على الشروط والاحكام</span>
-                            <input type="checkbox">
-                            <span class="checkmark"></span>
-                        </label>
                     </div>
-                    <div class="col-6 text-center align-self-start">
+                    <div class="col-12 col-md-6 text-center align-self-start mt-3 mt-md-0">
                         <input type="form-control" class="text-center">
                     </div>
+
+                    <label class="custom-checkbox mt-5 mr-3 mr-md-0"> . أوافق على<a href="#"> الشروط والأحكام</a> <br>
+                        <span class="text-danger label">يجب الموافقة على الشروط والاحكام</span>
+                        <input type="checkbox">
+                        <span class="checkmark"></span>
+                    </label>
                 </div>
-                <div class="d-flex justify-content-center">
+                <div class="d-flex justify-content-center mt-3 mt-md-0">
                     <button class="btn btn-warning  animate-up-2 px-4">اشترك الآن!</button>
                 </div>
             </div>
@@ -208,7 +210,8 @@
                 <div class="row ">
 
                     <div class="col-6 align-items-center   justify-content-start d-flex text-right d-flex">
-                        <button class="arrow-icon ml-2"><img src="images/arrow-right.svg" width="20" height="15" alt="" style="
+                        <button class="arrow-icon ml-2"><img src="images/arrow-right.svg" width="20" height="15" alt=""
+                                style="
                             position: relative;
                             top: -3px;
                         "></button>
@@ -216,7 +219,8 @@
                     </div>
                     <div class="col-6 align-items-center justify-content-end d-flex">
                         <button class="btn btn-light">الباقة الإحترافية</button>
-                        <button class="arrow-icon py-1 mr-2"><img src="images/arrow-left.svg" width="20" height="15" alt="" style="
+                        <button class="arrow-icon py-1 mr-2"><img src="images/arrow-left.svg" width="20" height="15"
+                                alt="" style="
                             position: relative;
                             top: -3px;
                         "></button>
