--- a/plan.html
+++ b/plan.html
@@ -193,7 +193,7 @@
 
                     </div>
                     <div class="col-12 col-md-6 text-center align-self-start mt-3 mt-md-0">
-                        <input type="form-control" class="text-center">
+                        <input type="text" class="text-center form-control mt-3 w-50 mx-auto">
                     </div>
 
                     <label class="custom-checkbox mt-5 mr-3 mr-md-0"> . أوافق على<a href="#"> الشروط والأحكام</a> <br>
