make pricing cards clickable

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
             </h2>
             <div class="row">
                 <div class="col-md-6 col-lg-4">
-                    <div class="pricing-card">
+
+                    <a class="pricing-card" href="#">
                         <div class="card text-center  p-3">
                             <div class="d-flex justify-content-end"><img src="images/plan3.svg" width="40" alt="">
                             </div>
@@ -41,10 +42,10 @@
                                 <button type="button" class="btn btn-warning font-weight-bold animate-up-2" tabindex="0">تفاصيل الباقة</button>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="pricing-card">
+                    <a class="pricing-card" href="#">
                         <div class="card text-center  p-3">
                             <div class="d-flex justify-content-end"><img src="images/plan1.svg" width="40" alt="">
                             </div>
@@ -65,10 +66,10 @@
                                 <button type="button" class="btn btn-warning font-weight-bold animate-up-2" tabindex="0">تفاصيل الباقة</button>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
                 <div class="col-md-6 col-lg-4">
-                    <div class="pricing-card">
+                    <a class="pricing-card" href="#">
                         <div class="card text-center  p-3">
                             <div class="d-flex justify-content-end"><img src="images/plan2.svg" width="40" alt="">
                             </div>
@@ -89,7 +90,7 @@
                                 <button type="button" class="btn btn-warning font-weight-bold animate-up-2" tabindex="0">تفاصيل الباقة</button>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
 
             </div>
