All feedback comments

--- a/plan.html
+++ b/plan.html
@@ -159,7 +159,7 @@
             <div class="plan-profile__payment py-5">
                 <div class="row">
 
-                    <div class="col-12 col-md-6 text-right" dir="rtl">
+                    <div class="col-12 col-md-6 pr-custom text-right" dir="rtl">
                         <label class="custom-radios">الاشتراك الشهري <br>
                             <span class="text-muted label"> <span class="text-dark">115</span> ريال (شامل الضريبة)
                             </span>
@@ -174,9 +174,9 @@
                             <span class="checkmark"></span>
                         </label>
                     </div>
-                    <div class="col-12 col-md-6 text-center">
+                    <div class="col-12 col-md-6 d-flex justify-content-md-end justify-content-center pl-custom">
                         <div class="price-circle">
-                            <span class="display-4 text-danger font-weight-bold">
+                            <span class=" price-circle__price text-danger font-weight-bold">
                                 230
                             </span>
                             <span class="price-circle__currency">ريال</span>
@@ -187,16 +187,16 @@
             <div class="plan-profile__discount-area py-5">
                 <div class="row align-items-center">
 
-                    <div class="col-12 col-md-6 text-right">
+                    <div class="col-12 col-md-6 pr-custom text-right">
                         <h4 class="font-weight-bold">هل يتوفر لديك كوبون خصم ؟</h4>
                         <span>أضف كود الخصم هنا</span>
 
                     </div>
-                    <div class="col-12 col-md-6 text-center align-self-start mt-3 mt-md-0">
-                        <input type="text" class="text-center form-control mt-3 w-50 mx-auto">
+                    <div class="col-12 col-md-6 d-flex justify-content-end align-self-start mt-3 mt-md-0 pl-custom">
+                        <input type="text" class="text-center form-control mt-3 w-50 ">
                     </div>
 
-                    <label class="custom-checkbox mt-5 mr-3 mr-md-0"> . أوافق على<a href="#"> الشروط والأحكام</a> <br>
+                    <label class="custom-checkbox mt-5 mr-3 mr-custom">  أوافق على<a href="#"> الشروط والأحكام</a> <br>
                         <span class="text-danger label">يجب الموافقة على الشروط والاحكام</span>
                         <input type="checkbox">
                         <span class="checkmark"></span>
@@ -233,6 +233,7 @@
     </div>
     <script src=" js/jquery-3.5.1.min.js "></script>
     <script src=" js/bootstrap.min.js "></script>
+
 </body>
 
 </html>
