--- a/plan.html
+++ b/plan.html
@@ -188,22 +188,22 @@
                 <div class="row align-items-center">
 
                     <div class="col-12 col-md-6 pr-custom text-right">
-                        <h4 class="font-weight-bold">هل يتوفر لديك كوبون خصم ؟</h4>
+                        <h4>هل يتوفر لديك كوبون خصم ؟</h4>
                         <span>أضف كود الخصم هنا</span>
 
                     </div>
-                    <div class="col-12 col-md-6 d-flex justify-content-end align-self-start mt-3 mt-md-0 pl-custom">
+                    <div class="col-12 col-md-6 d-flex justify-content-center justify-content-md-end align-self-start mt-3 mt-md-0 pl-custom">
                         <input type="text" class="text-center form-control mt-3 w-50 ">
                     </div>
 
                     <label class="custom-checkbox mt-5 mr-3 mr-custom">  أوافق على<a href="#"> الشروط والأحكام</a> <br>
-                        <span class="text-danger label">يجب الموافقة على الشروط والاحكام</span>
+                        <!-- <span class="text-danger label">يجب الموافقة على الشروط والاحكام</span> -->
                         <input type="checkbox">
                         <span class="checkmark"></span>
                     </label>
                 </div>
                 <div class="d-flex justify-content-center mt-3 mt-md-0">
-                    <button class="btn btn-warning  animate-up-2 px-4">اشترك الآن!</button>
+                    <button class="btn btn-warning  animate-up-2 px-5" style="font-size: 1.5rem;">اشترك الآن!</button>
                 </div>
             </div>
             <div class="plan-profile__nav py-5">
