--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>مميزات المتجر الإلكتروني</h5>
+                            <h5 class="table-sub-title">مميزات المتجر الإلكتروني</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -344,7 +344,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>تصميم واجهة المتجر</h5>
+                            <h5 class="table-sub-title">تصميم واجهة المتجر</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -405,7 +405,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>مميزات التطبيق</h5>
+                            <h5 class="table-sub-title">مميزات التطبيق</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -522,7 +522,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>حلول الدفع الإلكتروني</h5>
+                            <h5 class="table-sub-title">حلول الدفع الإلكتروني</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -653,7 +653,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>الشحن والخدمات اللوجستية</h5>
+                            <h5 class="table-sub-title">الشحن والخدمات اللوجستية</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -784,7 +784,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>مميزات تسويقية</h5>
+                            <h5 class="table-sub-title">مميزات تسويقية</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -915,7 +915,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>توفير المنتجات</h5>
+                            <h5 class="table-sub-title">توفير المنتجات</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -934,7 +934,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>فريق النجاح</h5>
+                            <h5 class="table-sub-title">فريق النجاح</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -1023,7 +1023,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>تأكيد الطلب آليًا</h5>
+                            <h5 class="table-sub-title"> تأكيد الطلب آليًا</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
@@ -1042,7 +1042,7 @@
                     </div>
                     <div class="row">
                         <div class="col text-center">
-                            <h5>الدعم الفني</h5>
+                            <h5 class="table-sub-title">الدعم الفني</h5>
                         </div>
                     </div>
                     <div class="row compare-packages_row">
