--- a/plan.html
+++ b/plan.html
@@ -25,65 +25,31 @@
                     </div>
                     <ul>
                         <li>
-                            <i class="fa fa-check-circle-o  text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                    </ul>
-                </div>
-                <div class="plan__content__card card text-right px-md-5 px-2 py-3">
-                    <div class="plan__content__card--title font-weight-bold">
-                        مميزات الباقة
-                    </div>
-                    <ul>
-                        <li>
-                            <i class="fa fa-check-circle-o  text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
-                        </li>
-                        <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                     </ul>
                 </div>
@@ -93,31 +59,31 @@
                     </div>
                     <ul>
                         <li>
-                            <i class="fa fa-check-circle-o  text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                     </ul>
                 </div>
@@ -127,31 +93,65 @@
                     </div>
                     <ul>
                         <li>
-                            <i class="fa fa-check-circle-o  text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" />عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                         <li>
-                            <i class="fa fa-check-circle-o text-success"></i> عدد لا نهائي من المنتجات والطلبات.
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                    </ul>
+                </div>
+                <div class="plan__content__card card text-right px-md-5 px-2 py-3">
+                    <div class="plan__content__card--title font-weight-bold">
+                        مميزات الباقة
+                    </div>
+                    <ul>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
+                        </li>
+                        <li>
+                            <img src="images/check-circle.svg" width="18" /> عدد لا نهائي من المنتجات والطلبات.
                         </li>
                     </ul>
                 </div>
